# common

factory/: CMakeLists.txt  README.md  abstact_factory.cc  factory_method.cc  register.cc  register.h  simple_factory.cc  template_factory.cc  template_factory.h  test_register.cc
singleton/: README.md  singleton.h  singleton_test.cc  template_singleton.cc
